# lamp-lighting-services

./: README.md  pyproject.toml
lamps/: __init__.py  models.py  routes.py
lamps-ui/: .eslintrc.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
lamps-ui/public/: index.html  tailwind.css
lamps-ui/src/: App.tsx  index.tsx  router.tsx
lamps-ui/src/components/: ErrorPage.tsx  Home.tsx  LampCard.tsx  LampCreation.tsx  LampInfo.tsx  lampApi.ts
lamps-ui/src/open-api/: DefaultApi.md
lamps-ui/src/open-api/.openapi-generator/: FILES
lamps-ui/src/open-api/apis/: DefaultApi.ts
lamps-ui/src/open-api/models/: Lamp.ts  ModelError.ts  ObjectSerializer.ts  all.ts
lamps-ui/src/open-api/types/: ObjectParamAPI.ts  ObservableAPI.ts  PromiseAPI.ts
open-api/: lamps.json
open_api/: spec.json
scripts/: generate-open-api.zsh  openapi-generator_validate.zsh  run-lamps.zsh  start-postgresql.zsh  validate-open-api.zsh  watch-tailwind-css.zsh
