[tool.poetry]
name = "lamp-lighting-services"
version = "0.1"
description = "Lamp Lighting Services"
authors = ["Jason Jin <jgjin@umich.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask-SQLAlchemy = "^3.1"
psycopg2 = "^2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
